# CartoTUI

./: .gitignore  README.md  cartotui.spec  config.json  configure.ps1  configure.sh  pyproject.toml  requirements.txt  setup.ps1  setup.sh
ascii_map/: actions.py  cache.py  cli.py  composite.py  config.py  geodesy.py  logging_conf.py  styles.py  version.py
ascii_map/rendering/: ascii_mode.py  braille_mode.py  quadrant_mode.py  renderer.py
ascii_map/resources/: palettes.json
ascii_map/ui/: app.py  buttons.py  compass.py  helppane.py  map_control.py  state.py  statusbar.py  toolbar.py
bindings/python/: README.md  carto_ffi.py  packer.py
cartotui/: __main__.py  _profile.py  admin1.py  adsb_server.py  adsb_setup.py  aircraft_colors.py  cache.py  cli.py  composite.py  config.py  configure.py  geodesy.py  logging_conf.py  looks.py  mvt_decoder.py  palettes.json  radar.py  raster_vector.py  snapshot.py  sources.py  theme_loader.py  themes.py  vector_source.py
cartotui/rendering/: dither.py  libcarto_backend.py  renderer.py  threshold.py
cartotui/themes/: amber.json  dark.json  ega.json  green.json  hicon.json  light.json  night.json  paper.json  retro.json  win31.json
cartotui/traffic/: __init__.py  adsb_api.py  aircraft.py  interest.py  lakeshark.py  lakeshark_tui.py  record.py  sbs1.py  silhouette.py  source.py
cartotui/ui/: aircraft_overlay.py  app.py  compass.py  goto.py  helppane.py  map_control.py  map_overlay.py  sidebar.py  state.py  statusbar.py  titlebar.py  toolbar.py
cartotui/ui/widgets/: __init__.py  adsb_widget.py  base.py  compass_widget.py  launcher_widget.py  location_widget.py  looks_widget.py  manager.py  panel.py  radar_widget.py  registry.py  render_widget.py  snapshot_widget.py  stats_widget.py  theme_widget.py  weather_widget.py
docs/wiki/: ADS-B.md  Architecture.md  Configuration.md  Home.md  Image-adjust.md  Installation.md  Keybindings.md  Overlays.md  Rendering.md  Snapshots.md  Themes.md  Troubleshooting.md  Widgets.md
firmware/esp32p4/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
firmware/esp32p4/components/libcarto/: CMakeLists.txt
firmware/esp32p4/main/: CMakeLists.txt  app_main.c  idf_component.yml
libcarto/: .gitignore  CMakeLists.txt
libcarto/include/carto/: arena.h  carto.h  fixedpt.h  framebuffer.h  geom.h  raster.h  style.h
libcarto/src/: carto.c  framebuffer.c  geom.c  mvt.c  mvt.h  raster.c  style.c
libcarto/tests/: render_tile_to_bmp.c  render_to_bmp.c
libcarto/tests/fixtures/: sample.mvt
packaging/: README.md  windows_entry.py
scripts/: run.ps1  run.sh
tests/: conftest.py  test_adsb.py  test_adsb_server.py  test_adsb_setup.py  test_app.py  test_boundaries.py  test_cache.py  test_config.py  test_labels.py  test_libcarto_threads.py  test_looks.py  test_markers.py  test_overlay.py  test_panel_fit.py  test_radar.py  test_render.py  test_snapshot_png.py  test_source_mode.py  test_themes.py  test_tone.py  test_vector_schema.py  test_vector_source.py  test_widgets.py
tools/: inspect_labels.py  preview_harness.py
