[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cartotui"
version = "0.11.0"
description = "Interactive ASCII map viewer for the terminal — vector and raster tile rendering."
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "SAMS0N1TE" }]
requires-python = ">=3.9"
keywords = ["map", "tui", "ascii", "openstreetmap", "terminal", "pmtiles", "vector-tiles"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console :: Curses",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Terminals",
]
dependencies = [
    "prompt_toolkit>=3.0.43",
    "Pillow>=10.0.0",
    "numpy>=1.24",
    "requests>=2.31",
    "pmtiles>=3.4",
    "pyserial>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]
# Optional fast MVT decoder — falls back to bundled pure-python if absent.
fastmvt = [
    "mapbox-vector-tile>=2.0",
]

[project.scripts]
cartotui = "cartotui.cli:main"
cartotui-config = "cartotui.configure:main"

[project.urls]
Homepage = "https://github.com/SAMS0N1TE/CartoTUI"
Issues = "https://github.com/SAMS0N1TE/CartoTUI/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["cartotui*"]

[tool.setuptools.package-data]
cartotui = ["*.json", "themes/*.json", "resources/*.json", "data/*.gz"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B"]
ignore = ["E501", "E701", "E702", "E731", "B007"]

[tool.ruff.lint.per-file-ignores]
"cartotui/ui/widgets/__init__.py" = ["F401"]
"cartotui/traffic/__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
